@@ -190,12 +190,12 @@ Vector_<NT_,AL_>& operator=(const Vector_<NT_,AL_>& vec)
     return *this;
 
   register int n = vec.d_;
-  if (n != d_) { 
+  if (n != d_) {
     if (d_ > 0) deallocate_vec_space(v_,d_);
     d_=n;
+    if (n > 0) allocate_vec_space(v_,n);
+    else v_ = (NT*)0;
   }
-  if (n > 0) allocate_vec_space(v_,n);
-  else v_ = (NT*)0;
 
   while (n--) v_[n] = vec.v_[n];
   return *this;
